
[TestGetWebsiteReferrers/Base - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer:medama.io Visitors:166879 VisitorsPercentage:0.3339} Bounces:41808 Duration:4985}
&{StatsReferrerSummary:{Referrer:google.com Visitors:166576 VisitorsPercentage:0.3332} Bounces:41843 Duration:5018}
&{StatsReferrerSummary:{Referrer: Visitors:166403 VisitorsPercentage:0.3329} Bounces:41603 Duration:5005}

---

[TestGetWebsiteReferrers/Browser - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer: Visitors:55691 VisitorsPercentage:0.3351} Bounces:13906 Duration:4980}
&{StatsReferrerSummary:{Referrer:medama.io Visitors:55337 VisitorsPercentage:0.333} Bounces:14104 Duration:4944}
&{StatsReferrerSummary:{Referrer:google.com Visitors:55142 VisitorsPercentage:0.3318} Bounces:13956 Duration:5016}

---

[TestGetWebsiteReferrers/Country - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer: Visitors:18594 VisitorsPercentage:0.3358} Bounces:4567 Duration:5008}
&{StatsReferrerSummary:{Referrer:google.com Visitors:18408 VisitorsPercentage:0.3325} Bounces:4690 Duration:5025}
&{StatsReferrerSummary:{Referrer:medama.io Visitors:18366 VisitorsPercentage:0.3317} Bounces:4610 Duration:4938}

---

[TestGetWebsiteReferrers/Device - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer:google.com Visitors:6219 VisitorsPercentage:0.3345} Bounces:1539 Duration:5099}
&{StatsReferrerSummary:{Referrer: Visitors:6199 VisitorsPercentage:0.3334} Bounces:1554 Duration:4975}
&{StatsReferrerSummary:{Referrer:medama.io Visitors:6175 VisitorsPercentage:0.3321} Bounces:1569 Duration:4901}

---

[TestGetWebsiteReferrers/Empty - 1]
RECORDS:

---

[TestGetWebsiteReferrers/Language - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer: Visitors:3131 VisitorsPercentage:0.3339} Bounces:760 Duration:4998}
&{StatsReferrerSummary:{Referrer:google.com Visitors:3129 VisitorsPercentage:0.3337} Bounces:773 Duration:5096}
&{StatsReferrerSummary:{Referrer:medama.io Visitors:3118 VisitorsPercentage:0.3325} Bounces:806 Duration:4909}

---

[TestGetWebsiteReferrers/OS - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer: Visitors:1048 VisitorsPercentage:0.3397} Bounces:274 Duration:4735}
&{StatsReferrerSummary:{Referrer:medama.io Visitors:1026 VisitorsPercentage:0.3326} Bounces:267 Duration:4809}
&{StatsReferrerSummary:{Referrer:google.com Visitors:1011 VisitorsPercentage:0.3277} Bounces:245 Duration:5257}

---

[TestGetWebsiteReferrers/Pathname - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer: Visitors:366 VisitorsPercentage:0.3411} Bounces:89 Duration:5411}
&{StatsReferrerSummary:{Referrer:medama.io Visitors:359 VisitorsPercentage:0.3346} Bounces:91 Duration:4728}
&{StatsReferrerSummary:{Referrer:google.com Visitors:348 VisitorsPercentage:0.3243} Bounces:80 Duration:5308}

---

[TestGetWebsiteReferrers/Referrer - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer:medama.io Visitors:359 VisitorsPercentage:1} Bounces:91 Duration:4728}

---

[TestGetWebsiteReferrers/UTMCampaign - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer:medama.io Visitors:110 VisitorsPercentage:1} Bounces:25 Duration:4732}

---

[TestGetWebsiteReferrers/UTMMedium - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer:medama.io Visitors:36 VisitorsPercentage:1} Bounces:5 Duration:6547}

---

[TestGetWebsiteReferrers/UTMSource - 1]
RECORDS:
&{StatsReferrerSummary:{Referrer:medama.io Visitors:16 VisitorsPercentage:1} Bounces:2 Duration:3389}

---

[TestGetWebsiteReferrersSummary/Base - 1]
RECORDS:
&{Referrer:medama.io Visitors:166879 VisitorsPercentage:0.3339}
&{Referrer:google.com Visitors:166576 VisitorsPercentage:0.3332}
&{Referrer: Visitors:166403 VisitorsPercentage:0.3329}

---

[TestGetWebsiteReferrersSummary/Browser - 1]
RECORDS:
&{Referrer: Visitors:55691 VisitorsPercentage:0.3351}
&{Referrer:medama.io Visitors:55337 VisitorsPercentage:0.333}
&{Referrer:google.com Visitors:55142 VisitorsPercentage:0.3318}

---

[TestGetWebsiteReferrersSummary/Country - 1]
RECORDS:
&{Referrer: Visitors:18594 VisitorsPercentage:0.3358}
&{Referrer:google.com Visitors:18408 VisitorsPercentage:0.3325}
&{Referrer:medama.io Visitors:18366 VisitorsPercentage:0.3317}

---

[TestGetWebsiteReferrersSummary/Device - 1]
RECORDS:
&{Referrer:google.com Visitors:6219 VisitorsPercentage:0.3345}
&{Referrer: Visitors:6199 VisitorsPercentage:0.3334}
&{Referrer:medama.io Visitors:6175 VisitorsPercentage:0.3321}

---

[TestGetWebsiteReferrersSummary/Empty - 1]
RECORDS:

---

[TestGetWebsiteReferrersSummary/Language - 1]
RECORDS:
&{Referrer: Visitors:3131 VisitorsPercentage:0.3339}
&{Referrer:google.com Visitors:3129 VisitorsPercentage:0.3337}
&{Referrer:medama.io Visitors:3118 VisitorsPercentage:0.3325}

---

[TestGetWebsiteReferrersSummary/OS - 1]
RECORDS:
&{Referrer: Visitors:1048 VisitorsPercentage:0.3397}
&{Referrer:medama.io Visitors:1026 VisitorsPercentage:0.3326}
&{Referrer:google.com Visitors:1011 VisitorsPercentage:0.3277}

---

[TestGetWebsiteReferrersSummary/Pathname - 1]
RECORDS:
&{Referrer: Visitors:366 VisitorsPercentage:0.3411}
&{Referrer:medama.io Visitors:359 VisitorsPercentage:0.3346}
&{Referrer:google.com Visitors:348 VisitorsPercentage:0.3243}

---

[TestGetWebsiteReferrersSummary/Referrer - 1]
RECORDS:
&{Referrer:medama.io Visitors:359 VisitorsPercentage:1}

---

[TestGetWebsiteReferrersSummary/UTMCampaign - 1]
RECORDS:
&{Referrer:medama.io Visitors:110 VisitorsPercentage:1}

---

[TestGetWebsiteReferrersSummary/UTMMedium - 1]
RECORDS:
&{Referrer:medama.io Visitors:36 VisitorsPercentage:1}

---

[TestGetWebsiteReferrersSummary/UTMSource - 1]
RECORDS:
&{Referrer:medama.io Visitors:16 VisitorsPercentage:1}

---
